--- a/index.html
+++ b/index.html
@@ -119,6 +119,44 @@
   </div>
 </section>
 
+
+<!-- ======== PARTNERS SECTION ======== -->
+<section class="partners">
+  <h2>
+    <span class="title-line"></span>
+    Our Trusted Partners
+    <span class="title-line"></span>
+  </h2>
+
+  <div class="partners-container">
+    <div class="partner-card">
+      <img src="images/partners/msc.png" alt="MSC Cruises">
+      <p>MSC Cruises</p>
+    </div>
+    <div class="partner-card">
+      <img src="images/partners/celestyal.png" alt="Celestyal Cruises">
+      <p>Celestyal Cruises</p>
+    </div>
+    <div class="partner-card">
+      <img src="images/partners/ncl.png" alt="Norwegian Cruise Line">
+      <p>Norwegian Cruise Line</p>
+    </div>
+    <div class="partner-card">
+      <img src="images/partners/explora.png" alt="Explora Journeys">
+      <p>Explora Journeys</p>
+    </div>
+    <div class="partner-card">
+      <img src="images/partners/aegean.png" alt="Aegean Airlines">
+      <p>Aegean Airlines</p>
+    </div>
+    <div class="partner-card">
+      <img src="images/partners/hertz.png" alt="Hertz Greece">
+      <p>Hertz Greece</p>
+    </div>
+  </div>
+</section>
+
+
 <!-- ======== FOOTER ======== -->
 <footer class="footer">
   <div class="footer-container">
@@ -170,7 +208,7 @@
 
 
 
-  <!------------- SCRIPTS -------------->
+  <!------------------------------------------------- SCRIPTS ---------------------------------------------------->
 
   <!--  JS για Leaflet και τον χάρτη -->
 <script>
