--- a/partner_details.html
+++ b/partner_details.html
@@ -5,19 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Partner Details - CruiseTheGreek</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/a2e0e6e6e0.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-  <!-- Header / Navigation -->
+<!-- ===== HEADER ===== -->
 <header>
   <nav class="navbar">
     <div class="logo">CruiseTheGreek.com</div>
-
-    <!-- Αυτό το κουμπί θα φαίνεται μόνο σε κινητά -->
-    <button class="menu-toggle" aria-label="Toggle Menu">
-      <i class="fa-solid fa-bars"></i>
-    </button>
-
+    <button class="menu-toggle" aria-label="Toggle Menu"><i class="fa-solid fa-bars"></i></button>
     <ul class="nav-links">
       <li><a href="index.html">HOME</a></li>
       <li><a href="results.html?type=cruise_only">CRUISES</a></li>
@@ -31,34 +27,30 @@
   </nav>
 </header>
 
-
+<!-- ===== MAIN ===== -->
 <main class="partner-details-page">
   <div id="partnerContent" class="partner-details"></div>
 
   <section class="partner-cruises">
-  <div class="partner-cruises-header">
-    <h2 id="cruisesTitle"></h2>
-    <a id="viewAllBtn" class="view-all-btn" href="#">View All</a>
-  </div>
-  <div id="partnerCruisesGrid" class="partner-cruises-grid"></div>
-</section>
-<section class="partner-packages">
-  <div class="partner-cruises-header">
-    <h2 id="packagesTitle"></h2>
-    <a id="viewAllPackagesBtn" class="view-all-btn" href="#">View All</a>
-  </div>
-  <div id="partnerPackagesGrid" class="partner-cruises-grid"></div>
-</section>
+    <div class="partner-cruises-header">
+      <h2 id="cruisesTitle"></h2>
+      <a id="viewAllBtn" class="view-all-btn" href="#">View All</a>
+    </div>
+    <div id="partnerCruisesGrid" class="partner-cruises-grid"></div>
+  </section>
 
-
+  <section class="partner-packages">
+    <div class="partner-cruises-header">
+      <h2 id="packagesTitle"></h2>
+      <a id="viewAllPackagesBtn" class="view-all-btn" href="#">View All</a>
+    </div>
+    <div id="partnerPackagesGrid" class="partner-cruises-grid"></div>
+  </section>
 </main>
 
-
-<!-- ======== FOOTER ======== -->
+<!-- ===== FOOTER ===== -->
 <footer class="footer">
   <div class="footer-container">
-    
-    <!-- 🔹 1η Στήλη: Logo + Επικοινωνία -->
     <div class="footer-col">
       <h3 class="footer-logo">CruiseTheGreek.com</h3>
       <p class="footer-phone">+1 (415) 7957979</p>
@@ -67,8 +59,6 @@
       <img src="images/gnto.png" alt="GNTO" class="footer-gnto">
       <p class="footer-gnto-code">GNTO: 0206E60000362401</p>
     </div>
-
-    <!-- 🔹 2η Στήλη: Navigation Menu -->
     <div class="footer-col">
       <h4>Menu</h4>
       <ul class="footer-nav">
@@ -82,8 +72,6 @@
         <li><a href="faqs.html" class="active">FAQ</a></li>
       </ul>
     </div>
-
-    <!-- 🔹 3η Στήλη: Newsletter -->
     <div class="footer-col">
       <h4>Newsletter</h4>
       <form class="newsletter-form">
@@ -97,13 +85,12 @@
       </ul>
     </div>
   </div>
-
-  <!-- 🔸 Κάτω γραμμή -->
   <div class="footer-bottom">
     <p>© 2016 - 2025 <span>CruiseTheGreek.com</span>. All Rights Reserved.</p>
   </div>
 </footer>
 
+<!-- ===== SCRIPTS ===== -->
 <script>
 document.addEventListener("DOMContentLoaded", () => {
   const partnerName = localStorage.getItem("selectedPartner");
@@ -118,82 +105,75 @@ document.addEventListener("DOMContentLoaded", () => {
       const container = document.getElementById("partnerContent");
       container.innerHTML = `
         <div class="partner-header">
-          <img src="${partner.logo}" alt="${partner.name}" class="partner-logo">
-          <div>
-            <h1>${partner.name}</h1>
-            <p><a href="${partner.website}" target="_blank">${partner.website}</a></p>
+          <div class="partner-main-info">
+            <img src="${partner.logo}" alt="${partner.name}" class="partner-logo">
+            <div class="partner-text">
+              <h1>${partner.name}</h1>
+              <p><a href="${partner.website}" target="_blank">${partner.website}</a></p>
+              <p class="partner-description">${partner.description}</p>
+              <ul class="partner-info">
+                <li><strong>Founded:</strong> ${partner.founded}</li>
+                <li><strong>Headquarters:</strong> ${partner.headquarters}</li>
+              </ul>
+              <h3>Services</h3>
+              <ul class="partner-services">
+                ${partner.services.map(s => `<li>${s}</li>`).join("")}
+              </ul>
+            </div>
           </div>
+          <div class="partner-ships">
+            <h3>Ships</h3>
+            <div class="ships-mini-grid" id="partnerShipsGrid"></div>
+            <a href="ships.html" class="view-all-ships-btn">View All Ships</a>
+          </div>
+          
+
         </div>
-
-        <p class="partner-description">${partner.description}</p>
-
-        <ul class="partner-info">
-          <li><strong>Founded:</strong> ${partner.founded}</li>
-          <li><strong>Headquarters:</strong> ${partner.headquarters}</li>
-        </ul>
-
-        <h3>Services</h3>
-        <ul class="partner-services">
-          ${partner.services.map(s => `<li>${s}</li>`).join("")}
-        </ul>
       `;
+
+// === Ships === (πλοία από companies.json + εικόνες από ships_data.json)
+if (partner.ships && partner.ships.length > 0) {
+  const grid = document.getElementById("partnerShipsGrid");
+
+  // Δεύτερο fetch μόνο για τα δεδομένα πλοίων
+  fetch("data/ships_data.json")
+    .then(res => res.json())
+    .then(shipsData => {
+      partner.ships.slice(0, 3).forEach(shipName => {
+        const ship = shipsData[shipName];
+        const img = ship?.image || "images/ship-placeholder.jpg";
+
+        const card = document.createElement("div");
+        card.className = "ship-mini-card";
+        card.innerHTML = `
+          <img src="${img}" alt="${shipName}">
+          <div class="ship-text">
+            <h4>${shipName}</h4>
+            <button>View</button>
+          </div>
+        `;
+
+        // ➜ Αποθήκευση και πλοήγηση σε ship-details.html
+        card.querySelector("button").addEventListener("click", () => {
+          localStorage.setItem("selectedShip", shipName);
+          window.location.href = "ship-details.html";
+        });
+
+        grid.appendChild(card);
+      });
     })
-    .catch(err => console.error("Error loading partner data:", err));
-});
-</script>
+    .catch(err => console.error("Error loading ships data:", err));
+}
 
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-  const partnerName = localStorage.getItem("selectedPartner");
-  if (!partnerName) return;
-
-  // === Load Partner Info (όπως έχεις ήδη) ===
-  fetch("data/companies.json")
-    .then(res => res.json())
-    .then(data => {
-      const partner = data[partnerName];
-      if (!partner) return;
-
-      const container = document.getElementById("partnerContent");
-      container.innerHTML = `
-        <div class="partner-header">
-          <img src="${partner.logo}" alt="${partner.name}" class="partner-logo">
-          <div>
-            <h1>${partner.name}</h1>
-            <p><a href="${partner.website}" target="_blank">${partner.website}</a></p>
-          </div>
-        </div>
-
-        <p class="partner-description">${partner.description}</p>
-
-        <ul class="partner-info">
-          <li><strong>Founded:</strong> ${partner.founded}</li>
-          <li><strong>Headquarters:</strong> ${partner.headquarters}</li>
-        </ul>
-
-        <h3>Services</h3>
-        <ul class="partner-services">
-          ${partner.services.map(s => `<li>${s}</li>`).join("")}
-        </ul>
-      `;
-
-      // === Τίτλος + κουμπί για Cruises ===
+      // === Cruises ===
       document.getElementById("cruisesTitle").textContent = `Cruises with ${partner.name}`;
-      const viewAllBtn = document.getElementById("viewAllBtn");
-      viewAllBtn.href = `results.html?type=cruise_only&company=${encodeURIComponent(partner.name)}`;
+      document.getElementById("viewAllBtn").href = `results.html?type=cruise_only&company=${encodeURIComponent(partner.name)}`;
 
-      // === Φόρτωση κρουαζιερών για αυτή την εταιρία ===
       fetch("data/cruises.json")
         .then(res => res.json())
         .then(cruiseData => {
           const cruises = Object.values(cruiseData).filter(c => c.company === partner.name);
           const grid = document.getElementById("partnerCruisesGrid");
-
-          if (cruises.length === 0) {
-            grid.innerHTML = `<p>No cruises available for this company.</p>`;
-            return;
-          }
-
           cruises.slice(0, 3).forEach(cruise => {
             const card = document.createElement("div");
             card.className = "partner-cruise-card";
@@ -202,194 +182,182 @@ document.addEventListener("DOMContentLoaded", () => {
               <h4>${cruise.title}</h4>
               <p>${cruise.duration}</p>
               <p class="price">${cruise.priceNew || ""}</p>
-              <button class="details-btn">Details</button>
-            `;
-
-            // Πατώντας -> άνοιγμα λεπτομερειών
+              <button class="details-btn">Details</button>`;
             card.querySelector(".details-btn").addEventListener("click", () => {
               localStorage.setItem("selectedCruise", cruise.title);
               window.location.href = "cruise_details.html";
             });
-
             grid.appendChild(card);
           });
         });
-    })
-    .catch(err => console.error("Error loading partner data:", err));
-});
-</script>
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-  const partnerName = localStorage.getItem("selectedPartner");
-  if (!partnerName) return;
 
-  fetch("data/packages.json")
-    .then(res => res.json())
-    .then(data => {
-      const packages = Object.values(data).filter(p => p.company === partnerName);
-      const grid = document.getElementById("partnerPackagesGrid");
-      const title = document.getElementById("packagesTitle");
-      const viewAll = document.getElementById("viewAllPackagesBtn");
-
-      if (packages.length === 0) {
-        document.querySelector(".partner-packages").style.display = "none";
-        return;
-      }
-
-      title.textContent = `Cruise Packages with ${partnerName}`;
-      viewAll.href = `results.html?type=cruise_package&company=${encodeURIComponent(partnerName)}`;
-
-      packages.slice(0, 3).forEach(pkg => {
-        const cardHTML = `
-          <div class="partner-cruise-card" data-title="${pkg.title}">
-            <img src="${pkg.image}" alt="${pkg.title}">
-            <h4>${pkg.title}</h4>
-            <p>${pkg.duration || ""}</p>
-            <p class="price">${pkg.priceNew || ""}</p>
-            <button class="details-btn">Details</button>
-        `;
-        grid.insertAdjacentHTML("beforeend", cardHTML);
-      });
-
-      // ✅ Προσθέτουμε listener για όλα τα κουμπιά Details
-      grid.addEventListener("click", e => {
-        const btn = e.target.closest(".details-btn");
-        if (!btn) return;
-
-        const card = btn.closest(".partner-cruise-card");
-        if (!card) return;
-
-        const title = card.dataset.title;
-        if (!title) return;
-
-        // Αποθήκευση του πακέτου στο localStorage
-        localStorage.setItem("selectedPackage", title);
-
-        // Μετάβαση στη σελίδα λεπτομερειών
-        window.location.href = "package-details.html";
-      });
-    })
-    .catch(err => console.error("Error loading partner packages:", err));
+      // === Packages ===
+      fetch("data/packages.json")
+        .then(res => res.json())
+        .then(pkgData => {
+          const packages = Object.values(pkgData).filter(p => p.company === partner.name);
+          const grid = document.getElementById("partnerPackagesGrid");
+          const title = document.getElementById("packagesTitle");
+          const viewAll = document.getElementById("viewAllPackagesBtn");
+          if (packages.length === 0) {
+            document.querySelector(".partner-packages").style.display = "none";
+            return;
+          }
+          title.textContent = `Cruise Packages with ${partner.name}`;
+          viewAll.href = `results.html?type=cruise_package&company=${encodeURIComponent(partner.name)}`;
+          packages.slice(0, 3).forEach(pkg => {
+            const cardHTML = `
+              <div class="partner-cruise-card" data-title="${pkg.title}">
+                <img src="${pkg.image}" alt="${pkg.title}">
+                <h4>${pkg.title}</h4>
+                <p>${pkg.duration || ""}</p>
+                <p class="price">${pkg.priceNew || ""}</p>
+                <button class="details-btn">Details</button>
+              </div>`;
+            grid.insertAdjacentHTML("beforeend", cardHTML);
+          });
+          grid.addEventListener("click", e => {
+            const btn = e.target.closest(".details-btn");
+            if (!btn) return;
+            const card = btn.closest(".partner-cruise-card");
+            const title = card.dataset.title;
+            localStorage.setItem("selectedPackage", title);
+            window.location.href = "package-details.html";
+          });
+        });
+    });
 });
 </script>
 
-
-
-
+<!-- ===== STYLES ===== -->
 <style>
-  .partner-cruises {
-  margin-top: 60px;
-  padding-top: 20px;
-  border-top: 1px solid #ddd;
-}
-
-.partner-cruises-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-.partner-cruises-header h2 {
-  color: #002b45;
-  font-size: 22px;
-}
-
-.view-all-btn {
-  background: #ff6600;
-  color: white;
-  padding: 8px 18px;
-  border-radius: 6px;
-  text-decoration: none;
-  font-size: 14px;
-  transition: background 0.3s ease;
-}
-
-.view-all-btn:hover {
-  background: #e65c00;
-}
-
-.partner-cruises-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 20px;
-}
-
-.partner-cruise-card {
-  background: #fff;
-  border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-  overflow: hidden;
-  text-align: center;
-  padding-bottom: 15px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.partner-cruise-card img {
-  width: 100%;
-  height: 150px;
-  object-fit: cover;
-}
-
-.partner-cruise-card h4 {
-  margin: 10px 0 5px;
-  font-size: 16px;
-  color: #002b45;
-}
-
-.partner-cruise-card p {
-  font-size: 14px;
-  color: #555;
-}
-
-.partner-cruise-card .price {
-  color: #ff6600;
-  font-weight: bold;
-}
-
-.partner-cruise-card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 6px 18px rgba(0,0,0,0.15);
-}
-
 .partner-details-page {
-  max-width: 900px;
+  max-width: 1000px;
   margin: 60px auto;
   padding: 20px;
 }
 .partner-header {
   display: flex;
-  align-items: center;
-  gap: 20px;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 30px;
   border-bottom: 1px solid #ddd;
-  padding-bottom: 20px;
-  margin-bottom: 25px;
+  padding-bottom: 25px;
+  margin-bottom: 30px;
+  flex-wrap: wrap;
+}
+.partner-main-info {
+  display: flex;
+  align-items: flex-start;
+  gap: 20px;
+  flex: 1;
+  min-width: 280px;
 }
 .partner-logo {
-  width: 120px;
+  width: 130px;
   height: auto;
   object-fit: contain;
 }
-.partner-description {
-  font-size: 16px;
-  color: #444;
-  margin-bottom: 20px;
-}
-.partner-info {
-  list-style: none;
-  padding: 0;
-  margin-bottom: 20px;
-}
-.partner-info li {
-  margin-bottom: 6px;
+.partner-text h1 {
+  font-size: 28px;
   color: #002b45;
 }
-.partner-services {
-  list-style: disc;
-  margin-left: 25px;
-  color: #444;
+.partner-ships {
+  width: 260px;
+  background: #f8f9fa;
+  border-radius: 12px;
+  padding: 25px 15px;   /* ↑ πριν 15px */
+  box-shadow: 0 2px 10px rgba(0,0,0,0.06);
 }
-</style>
 
+.partner-ships h3 {
+  font-size: 18px;
+  color: #002b45;
+  margin-bottom: 10px;
+  text-align: center;
+}
+.ships-mini-grid {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  max-height: 240px;
+  overflow-y: auto;
+}
+.ship-mini-card {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  background: #fff;
+  border-radius: 8px;
+  padding: 6px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+  transition: transform 0.2s ease;
+}
+.ship-mini-card:hover { transform: translateY(-2px); }
+.ship-mini-card img {
+  width: 100px;
+  height: 50px;
+  border-radius: 6px;
+  object-fit: cover;
+}
+.ship-text { flex: 1; display: flex; justify-content: space-between; align-items: center; }
+.ship-text h4 { font-size: 14px; color: #002b45; margin: 0; }
+.ship-text button {
+  background: #ff6600;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 3px 8px;
+  font-size: 12px;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+.ship-text button:hover { background: #e65c00; }
+
+/* existing styles untouched */
+.partner-cruises { margin-top: 60px; padding-top: 20px; border-top: 1px solid #ddd; }
+.partner-cruises-header {
+  display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;
+}
+.partner-cruises-header h2 { color: #002b45; font-size: 22px; }
+.view-all-btn {
+  background: #ff6600; color: white; padding: 8px 18px;
+  border-radius: 6px; text-decoration: none; font-size: 14px;
+  transition: background 0.3s ease;
+}
+.view-all-btn:hover { background: #e65c00; }
+.partner-cruises-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 20px;
+}
+.partner-cruise-card {
+  background: #fff; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  overflow: hidden; text-align: center; padding-bottom: 15px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.partner-cruise-card img { width: 100%; height: 150px; object-fit: cover; }
+.partner-cruise-card:hover { transform: translateY(-5px); box-shadow: 0 6px 18px rgba(0,0,0,0.15); }
+.partner-cruise-card h4 { margin: 10px 0 5px; font-size: 16px; color: #002b45; }
+.partner-cruise-card p { font-size: 14px; color: #555; }
+.partner-cruise-card .price { color: #ff6600; font-weight: bold; }
+.view-all-ships-btn {
+  display: block;
+  margin-top: 14px;
+  text-align: center;
+  background: #ff6600;
+  color: white;
+  padding: 7px 0;
+  border-radius: 6px;
+  font-size: 13px;
+  text-decoration: none;
+  transition: background 0.3s ease;
+  font-weight: 500;
+}
+.view-all-ships-btn:hover {
+  background: #e65c00;
+}
+
+</style>
 </body>
 </html>
