--- a/index.html
+++ b/index.html
@@ -700,6 +700,23 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 </script>
 
+<script>
+document.getElementById("searchForm").addEventListener("submit", e => {
+  e.preventDefault();
+  const type = document.getElementById("cruise-type").value;
+
+  if (!type) return;
+
+  // Αν είναι Shore Excursions → πηγαίνει στη σελίδα excursions
+  if (type === "cruise_excursion") {
+    window.location.href = "excursions.html";
+  } 
+  else {
+    window.location.href = `results.html?type=${type}`;
+  }
+});
+</script>
+
 
 </body>
 </html>
