--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <li><a href="destinations.html">DESTINATIONS</a></li>
       <li><a href="contact.html">CONTACT</a></li>
       <li><a href="faqs.html" class="active">FAQ</a></li>
+      <li><a href="blog.html" class="active">BLOG</a></li>
     </ul>
   </nav>
 </header>
@@ -131,6 +132,8 @@
   <div class="partners-container" id="partnersContainer"></div>
 </section>
 
+
+
 <!-- ======== FOOTER ======== -->
 <footer class="footer">
   <div class="footer-container">
@@ -156,6 +159,8 @@
         <li><a href="ships.html">CRUISE SHIPS</a></li>
         <li><a href="destinations.html">DESTINATIONS</a></li>
         <li><a href="contact.html">CONTACT</a></li>
+        <li><a href="faqs.html" class="active">FAQ</a></li>
+        <li><a href="blog.html" class="active">BLOG</a></li>
       </ul>
     </div>
 
