--- a/blog.html
+++ b/blog.html
@@ -156,6 +156,64 @@ body {
     flex-direction: column;
   }
 }
+
+/* ===== Newsletter in Sidebar ===== */
+.newsletter-box {
+  background:linear-gradient(135deg, #003d6b, #005b8f);
+  border-radius: 12px;
+  padding: 20px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+  text-align: center;
+}
+
+.newsletter-box p {
+  font-size: 13px;
+  color: #fff;
+  margin-bottom: 12px;
+}
+
+#newsletterForm {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+#newsletterForm input {
+  padding: 8px 10px;
+  border-radius: 20px;
+  border: 1px solid #ccc;
+  font-size: 14px;
+  outline: none;
+  transition: border-color 0.3s ease;
+}
+
+#newsletterForm input:focus {
+  border-color: #ff6600;
+}
+
+#newsletterForm button {
+  background: linear-gradient(90deg, #ff6600, #ff8533);
+  color: white;
+  border: none;
+  border-radius: 20px;
+  padding: 8px;
+  font-weight: 600;
+  font-size: 14px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+#newsletterForm button:hover {
+  background: linear-gradient(90deg, #ff8533, #ffa366);
+}
+
+.newsletter-msg {
+  font-size: 13px;
+  margin-top: 8px;
+  color: #2e8b57;
+  font-weight: 600;
+}
+
   </style>
 </head>
 <body>
@@ -192,14 +250,72 @@ body {
       <h4>Recent Posts</h4>
       <div id="recentPosts"></div>
     </div>
+
     <div class="sidebar-section">
       <h4>Categories</h4>
       <ul class="category-list" id="categoryList"></ul>
     </div>
+
+    <!-- 🔸 Newsletter -->
+    <div class="sidebar-section newsletter-box">
+      <h4>Join our Newsletter</h4>
+      <p>Get exclusive cruise offers, new articles & travel inspiration every month.</p>
+      <form id="newsletterForm">
+        <input type="email" id="newsletterEmail" placeholder="Your email" required>
+        <button type="submit">Subscribe</button>
+      </form>
+      <p id="newsletterMsg" class="newsletter-msg"></p>
+    </div>
   </aside>
+
 </div>
 
+<!-- ======== FOOTER ======== -->
 <footer class="footer">
+  <div class="footer-container">
+    
+    <!-- 🔹 1η Στήλη: Logo + Επικοινωνία -->
+    <div class="footer-col">
+      <h3 class="footer-logo">CruiseTheGreek.com</h3>
+      <p class="footer-phone">+1 (415) 7957979</p>
+      <p><a href="mailto:info@cruisethegreek.com">info@cruisethegreek.com</a></p>
+      <p>8, Aggelou Vlachou st, Plaka, Athens</p>
+      <img src="images/gnto.png" alt="GNTO" class="footer-gnto">
+      <p class="footer-gnto-code">GNTO: 0206E60000362401</p>
+    </div>
+
+    <!-- 🔹 2η Στήλη: Navigation Menu -->
+    <div class="footer-col">
+      <h4>Menu</h4>
+      <ul class="footer-nav">
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="cruises.html">CRUISES</a></li>
+        <li><a href="packages.html">CRUISE PACKAGES</a></li>
+        <li><a href="tours.html">TOURS</a></li>
+        <li><a href="ships.html">CRUISE SHIPS</a></li>
+        <li><a href="destinations.html">DESTINATIONS</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+        <li><a href="faqs.html" class="active">FAQ</a></li>
+        <li><a href="blog.html" class="active">BLOG</a></li>
+      </ul>
+    </div>
+
+    <!-- 🔹 3η Στήλη: Newsletter -->
+    <div class="footer-col">
+      <h4>Newsletter</h4>
+      <form class="newsletter-form">
+        <input type="email" placeholder="Email" required>
+        <button type="submit">REGISTER</button>
+      </form>
+      <ul>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">B2B Partnership</a></li>
+        <li><a href="#">Partners Login</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- 🔸 Κάτω γραμμή -->
   <div class="footer-bottom">
     <p>© 2016 - 2025 <span>CruiseTheGreek.com</span>. All Rights Reserved.</p>
   </div>
@@ -261,10 +377,10 @@ function renderSidebar(posts) {
     </div>
   `).join("");
 
-  // Categories
-  const uniqueCats = [...new Set(posts.map(p=>p.category))];
+  // Categories (add 'All' first)
+  const uniqueCats = ["All", ...new Set(posts.map(p=>p.category))];
   cats.innerHTML = uniqueCats.map(cat=>`
-    <li><a href="#" onclick="filterCategory('${cat}')">${cat}</a></li>
+    <li><a href="#" onclick="filterCategory('${cat}')" ${cat==="All"?"class='active'":""}>${cat}</a></li>
   `).join("");
 }
 
@@ -274,10 +390,25 @@ function filterCategory(cat) {
   links.forEach(l => l.classList.remove("active"));
   const active = [...links].find(l => l.textContent === cat);
   if (active) active.classList.add("active");
-  renderPosts(allPosts.filter(p => p.category === cat));
+
+  if (cat === "All") renderPosts(allPosts);
+  else renderPosts(allPosts.filter(p => p.category === cat));
 }
 
 loadBlog();
 </script>
+
+
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const toggleBtn = document.querySelector(".menu-toggle");
+    const navLinks = document.querySelector(".nav-links");
+
+    toggleBtn.addEventListener("click", () => {
+      navLinks.classList.toggle("active");
+    });
+  });
+</script>
+
 </body>
 </html>
